tests/snapshots/test_e2e__parser@integer_constant.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/integer_constant.c
---
Parser(
    Program {
        function: Function {
            identifier: "main",
            body: Return {
                expression: IntegerConstant {
                    value: 1,
                },
            },
        },
    },
)
