tests/snapshots/test_e2e__parser@parenthesized_expression.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/parenthesized_expression.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: IntegerConstant {
                value: 1,
            },
        },
    },
}
