tests/snapshots/test_e2e__parser@unary_complement.c.snap
---
source: tests/test_e2e.rs
expression: cmm_ast
input_file: tests/test_programs/unary_complement.c
---
Program {
    function: Function {
        identifier: "main",
        body: Return {
            expression: Unary {
                operator: Complement,
                expression: IntegerConstant {
                    value: 1,
                },
            },
        },
    },
}
