tests/snapshots/test_e2e__tacky@binary_diff.c.snap
---
source: tests/test_e2e.rs
expression: tacky_ast
input_file: tests/test_programs/binary_diff.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            Binary {
                operator: Subtract,
                source1: Constant(
                    2,
                ),
                source2: Constant(
                    3,
                ),
                destination: Variable(
                    "tmp.0",
                ),
            },
            Return {
                value: Variable(
                    "tmp.0",
                ),
            },
        ],
    },
}
